# librealsense-mingw-build

./: CMakeLists.txt  readme.md
CMake/: external_catch2.cmake  external_fastcdr.cmake  external_fastdds.cmake  external_foonathan_memory.cmake  external_json.cmake  external_libcurl.cmake  external_libusb.cmake  external_pybind11.cmake  external_sqlite3.cmake  external_yaml_cpp.cmake  security_flags_helper_functions.cmake  version_config.cmake  windows_config.cmake
common/: windows-app-bootstrap.cpp
include/librealsense2/h/: rs_version.h
src/: CMakeLists.txt  realsense.def  rs.cpp  to-string.cpp
src/gl/: CMakeLists.txt  realsense-gl.def
src/mf/: mf-backend.cpp  mf-hid.cpp  mf-uvc.cpp
src/proc/: synthetic-stream.h
src/res/: librealsense.rc  winres_constants.h
src/win/: win-helpers.cpp
src/winusb/: device-winusb.cpp  enumerator-winusb.cpp  messenger-winusb.cpp
tools/: tools_common.cmake
tools/depth-quality/: CMakeLists.txt
tools/realsense-viewer/: CMakeLists.txt
tools/realsense-viewer/res/: realsense-app.rc
tools/realsense-viewer/tests/: viewer_tests.cmake
wrappers/csharp/: CMakeLists.txt
wrappers/csharp/Intel.RealSense/: Intel.RealSense.csproj
